--- a/client/src/app/main-page/main-page.component.html
+++ b/client/src/app/main-page/main-page.component.html
@@ -21,7 +21,8 @@
             <h2 class="center brown-text"><i class="material-icons">date_range</i></h2>
             <h5 class="center" style="font-weight: bold;">Собрания</h5>
 
-            <p class="center light">Каждое воскресенье 12:00</p>
+            <p class="center light">Каждое воскресенье</p>
+            <p class="center light">Время: 12:00</p>
           </div>
         </div>
 
@@ -68,23 +69,23 @@
               <h5 class="center" style="margin: 0 0 20px 0; font-weight: bold;">Проповеди</h5>
           </div>
       </div>
-      <div class="col s6" style="margin-top: 20px;">
-          <div class="video-container z-depth-3">
+      <div class="col s12" style="margin-top: 20px;">
+          <div class="video-container z-depth-3" style="border-radius: 10px;">
               <iframe src="//www.youtube.com/embed/uWLb1Inhj8o?rel=0" frameborder="0" allowfullscreen></iframe>
           </div>
       </div>
-      <div class="col s6" style="margin-top: 20px;">
-        <div class="video-container z-depth-3">
+      <div class="col s12" style="margin-top: 20px;">
+        <div class="video-container z-depth-3" style="border-radius: 10px;">
             <iframe src="//www.youtube.com/embed/-MrvcQatrYY?rel=0" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
-      <div class="col s6" style="margin-top: 20px;">
-        <div class="video-container z-depth-3">
+      <div class="col s12" style="margin-top: 20px;">
+        <div class="video-container z-depth-3" style="border-radius: 10px;">
             <iframe src="//www.youtube.com/embed/DFVIe-2H8IA?rel=0" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
-      <div class="col s6" style="margin-top: 20px; margin-bottom: 20px;">
-        <div class="video-container z-depth-3">
+      <div class="col s12" style="margin-top: 20px; margin-bottom: 20px;">
+        <div class="video-container z-depth-3" style="border-radius: 10px;">
             <iframe src="//www.youtube.com/embed/8iZJfcyUugo?rel=0" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
@@ -102,7 +103,7 @@
   <div class="section no-pad-bot">
     <div class="container">
       <div class="row center">
-        <h6 class="center header col s12 light" style="font-weight: bold;">
+        <h6 class="center header col s12 light type1" style="font-weight: bold;">
           Церковь - это семья. Каждый человек в Доме Божьем обретёт друзей, ощутит Любовь Отца и наполнится словом Божьим. Двери церкви всегда открыты - приходи, мы тебя ждем!
         </h6>
       </div>
