--- a/client/src/app/main-page/main-page.component.html
+++ b/client/src/app/main-page/main-page.component.html
@@ -2,7 +2,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row">
-            <h3 style="background-color: #877b6673; font-weight: bold; font-family: 'ProximaNova-Black', arial, sans-serif;;" class="header col s12 light">
+            <h3 style="background-color: #877b6673; border-radius: 10px; font-weight: bold; font-family: 'ProximaNova-Black', arial, sans-serif;;" class="header col s12 light">
                 Талнахская Христианская Церковь "Виноградник"
             </h3>
         </div>
