--- a/client/src/app/feedback-page/feedback-page.component.html
+++ b/client/src/app/feedback-page/feedback-page.component.html
@@ -8,6 +8,7 @@
                 class="card"
                 [formGroup]="form"
                 (ngSubmit)="onSubmit()"
+                style="border-radius: 10px;"
               >
                 <div class="card-content">
                   <span class="card-title">Связаться с нами</span>
