--- a/client/src/app/shared/layouts/auth-layout/auth-layout.component.html
+++ b/client/src/app/shared/layouts/auth-layout/auth-layout.component.html
@@ -1,5 +1,5 @@
 
-  <nav style="background-color: #AFC97E;"> 
+  <nav style="background-color: #AFC97E;" class="navbar"> 
     <div class="nav-wrapper" style="background-color: #AFC97E;">
         <!-- <a routerLink="/" class="brand-logo">
             <img src="/uploads/logo-min.png" alt="logo">
