--- a/client/src/app/feedback-page/feedback-page.component.html
+++ b/client/src/app/feedback-page/feedback-page.component.html
@@ -34,8 +34,10 @@
                   <button
                     type="submit"
                     class="modal-action btn waves-effect"
+                    [disabled]="form.invalid"
                   >
                     Отправить
+                    <i class="material-icons right">send</i>
                   </button>
                 </div>
               </form>
