Update the title

--- a/client/src/app/main-page/main-page.component.html
+++ b/client/src/app/main-page/main-page.component.html
@@ -3,7 +3,7 @@
       <div class="container">
         <div class="row">
             <h3 style="background-color: #877b6673; border-radius: 10px; font-weight: bold; font-family: 'ProximaNova-Black', arial, sans-serif;;" class="header col s12 light">
-                Талнахская Христианская Церковь "Виноградник"
+                Церковь евангельских христиан "Виноградник"
             </h3>
         </div>
         <br><br>
