Update the title

--- a/client/src/app/main-page/main-page.component.html
+++ b/client/src/app/main-page/main-page.component.html
@@ -115,7 +115,7 @@
 <footer class="page-footer" style="background-color: #AFC97E;">
   <div class="container">
     <div class="row center">
-      <h6 class="white-text">Талнахская Христианская Церковь "Виноградник"</h6>
+      <h6 class="white-text">Церковь евангельских христиан "Виноградник"</h6>
       <a href="https://www.youtube.com/channel/UCWxxa2khLOqHmhEp3P4E-Qw/featured">
           <img src="/uploads/youtube-icon.svg" alt="youtube icon" style="height: 20px; transform: translate(0px, 2px);">
       </a>
