Update the title

--- a/client/src/app/main-page/main-page.component.html
+++ b/client/src/app/main-page/main-page.component.html
@@ -123,7 +123,7 @@
   </div>
   <div class="footer-copyright">
       <div class="container center">
-        <p>© 2022 churchvinogradnik.com</p>
+        <p>© 2022 vinogradnik-church.com</p>
       </div>
   </div>
 </footer>
