--- a/client/src/app/main-page/main-page.component.html
+++ b/client/src/app/main-page/main-page.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container">
