--- a/client/src/app/shared/components/navbar/navbar.component.html
+++ b/client/src/app/shared/components/navbar/navbar.component.html
@@ -1,28 +1,125 @@
-<nav style="background-color: #AFC97E;" class="navbar"> 
-    <div class="nav-wrapper" style="background-color: #AFC97E;">
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a routerLink="/">Главная</a></li>
-            <li><a routerLink="/" (click)="toDistance(350)">Информация</a></li>
-            <li><a routerLink="/" (click)="toDistance(1350)">Проповеди</a></li>
-            <li><a routerLink="/feedback">Написать нам</a></li>
+<nav class="navbar"> 
+    <div class="nav-wrapper">
+        <ul id="slide-out" class="sidenav sidenav-fixed" #sidenav>
+            <div class="sidenav__links">
+                <h2 class="sidenav__header title-header">Меню</h2>
+                <li class="sidenav__item">
+                    <a
+                        routerLink="/"
+                        class="waves-effect sidenav-close sidenav__link"
+                        (click)="toDistance(0)"
+                    >   
+                        Главная
+                    </a>
+                </li>
+                <li class="sidenav__item">
+                    <a
+                        class="dropdown-trigger sidenav__link"
+                        data-target="dropdown1"
+                        #dropdown
+                    >
+                        Во что мы верим
+                        <i class="material-icons right">arrow_drop_down</i>
+                    </a>
+                </li>
+                <ul
+                    id='dropdown1'
+                    class='dropdown-content'
+                >
+                    <li><a routerLink="/creed" class="sidenav__link sidenav__sublink">Символ веры</a></li>
+                    <li><a routerLink="/our-values" class="sidenav__link sidenav__sublink">Наши ценности</a></li>
+                </ul>
+                <li class="sidenav__item">
+                    <a
+                        class="waves-effect sidenav-close sidenav__link"
+                        routerLink="/history"
+                        (click)="toDistance(0)"
+                    >
+                        Кто мы
+                    </a>
+                </li>
+                <li class="sidenav__item">
+                    <a
+                        class="dropdown-trigger sidenav__link"
+                        data-target="dropdown2"
+                        #dropdown2
+                    >
+                        Ресурсы
+                        <i class="material-icons right">arrow_drop_down</i>
+                    </a>
+                </li>
+                <ul
+                    id='dropdown2'
+                    class='dropdown-content'
+                >
+                    <li><a routerLink="/resources"class="sidenav__link sidenav__sublink">Теология Виноградника</a></li>
+                    <li><a routerLink="/resources" class="sidenav__link sidenav__sublink" (click)="toDistance(300)">Ресурсы для духовного роста</a></li>
+                </ul>
+                <li class="sidenav__item">
+                    <a
+                        class="dropdown-trigger sidenav__link"
+                        data-target="dropdown3"
+                        #dropdown3
+                    >
+                        Я здесь впервые
+                        <i class="material-icons right">arrow_drop_down</i>
+                    </a>
+                </li>
+                <ul id='dropdown3' class='dropdown-content'>
+                    <li><a routerLink="/introduction" class="sidenav__link sidenav__sublink" (click)="toDistance(0)">Библия. Во что мы верим?</a></li>
+                    <li><a href="http://vinogradnik-church.com/introduction#relationship" class="sidenav__link sidenav__sublink">Как мне начать отношения с Богом?</a></li>
+                    <li><a href="http://vinogradnik-church.com/introduction#expectation" class="sidenav__link sidenav__sublink">Чего ожидать в церкви?</a></li>
+                    <li><a href="http://vinogradnik-church.com/introduction#baptism" class="sidenav__link sidenav__sublink">Крещение</a></li>
+                </ul>
+                <li class="sidenav__item">
+                    <a 
+                        class="waves-effect sidenav-close sidenav__link"
+                        routerLink="/feedback"
+                    >
+                        Написать нам
+                    </a>
+                </li>
+            </div>
+            <div class="sidenav__footer">
+                <h2 class="sidenav__header title-header">Контакты</h2>
+                <p class="sidenav__text">
+                    Норильский «Виноградник» приглашает всех желающих посетить воскресные богослужения в 12.00 по местному времени.
+                </p>
+                <ul class="sidenav__contacts contacts">
+                    <li class="contacts__item item-contact">
+                        <a 
+                            href="mailto:vinogradnikchurch@gmail.com"
+                            class="item-contact__link"
+                        >
+                            <i class="material-icons contacts-icon">email</i>
+                            vinogradnikchurch@gmail.com
+                        </a>
+                    </li>
+                    <li>
+                        <a                        
+                            class="item-contact__link"
+                            href="Tel:+79135302209"
+                        >
+                            <i class="material-icons contacts-icon">phone_iphone</i>
+                            +7-913-530-22-09
+                        </a>
+                    </li>
+                    <li>
+                        <a
+                            class="item-contact__link"
+                            href="#"
+                        >
+                            <i class="material-icons contacts-icon">location_on</i>
+                            г. Норильск, ул. Енисейская, 17
+                        </a>
+                    </li>
+                </ul>
+                <p class="sidenav__text">© Виноградник, 2023</p>
+            </div>
         </ul>
-        <ul id="slide-out" class="sidenav" #sidenav>
-            <li><a routerLink="/" class="waves-effect sidenav-close" (click)="toDistance(0)">
-                <i class="material-icons">home</i>Главная</a>
-            </li>
-            <li><div class="divider"></div></li>
-            <li><a class="waves-effect sidenav-close" routerLink="/" (click)="toDistance(350)">
-                <i class="material-icons">dvr</i>Информация</a>
-            </li>
-            <li><a class="waves-effect sidenav-close" routerLink="/" (click)="toDistance(1350)">
-                <i class="material-icons">video_library</i>Проповеди</a>
-            </li>
-            <li><a class="waves-effect sidenav-close" routerLink="/feedback">
-                <i class="material-icons">forum</i>Написать нам</a>
-            </li>
-        </ul>
-        <a href="#" data-target="slide-out" class="sidenav-trigger hide-on-med-and-up">
+        <a href="#" data-target="slide-out" class="sidenav-trigger show-on-large">
             <i class="material-icons">menu</i>
         </a>
+
     </div>
- </nav>
+</nav>
