--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,2 +1,224 @@
 @import "~materialize-css/dist/css/materialize.min.css";
 @import "theme/styles.min.css";
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:100,200,300,regular,500,600,700,800,900&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,regular,500,600,700,800,300italic,italic,500italic,600italic,700italic,800italic&display=swap");
+
+.sidenav-overlay {
+  background-color: transparent;
+}
+
+nav {
+  background-color: transparent;
+}
+
+.sidenav li>a {
+	font-weight: 400;
+	line-height: 38px;
+}
+
+.sidenav li > a > i.material-icons {
+	line-height: 38px;
+	margin-right: 10px;
+  color: var(--color-accent);
+}
+
+input:not([type]):focus:not([readonly])+label, input[type=text]:not(.browser-default):focus:not([readonly])+label, input[type=password]:not(.browser-default):focus:not([readonly])+label, input[type=email]:not(.browser-default):focus:not([readonly])+label, input[type=url]:not(.browser-default):focus:not([readonly])+label, input[type=time]:not(.browser-default):focus:not([readonly])+label, input[type=date]:not(.browser-default):focus:not([readonly])+label, input[type=datetime]:not(.browser-default):focus:not([readonly])+label, input[type=datetime-local]:not(.browser-default):focus:not([readonly])+label, input[type=tel]:not(.browser-default):focus:not([readonly])+label, input[type=number]:not(.browser-default):focus:not([readonly])+label, input[type=search]:not(.browser-default):focus:not([readonly])+label, textarea.materialize-textarea:focus:not([readonly])+label {
+	color: var(--color-purple);
+}
+
+input.valid:not([type]), input.valid:not([type]):focus, input.valid[type=text]:not(.browser-default), input.valid[type=text]:not(.browser-default):focus, input.valid[type=password]:not(.browser-default), input.valid[type=password]:not(.browser-default):focus, input.valid[type=email]:not(.browser-default), input.valid[type=email]:not(.browser-default):focus, input.valid[type=url]:not(.browser-default), input.valid[type=url]:not(.browser-default):focus, input.valid[type=time]:not(.browser-default), input.valid[type=time]:not(.browser-default):focus, input.valid[type=date]:not(.browser-default), input.valid[type=date]:not(.browser-default):focus, input.valid[type=datetime]:not(.browser-default), input.valid[type=datetime]:not(.browser-default):focus, input.valid[type=datetime-local]:not(.browser-default), input.valid[type=datetime-local]:not(.browser-default):focus, input.valid[type=tel]:not(.browser-default), input.valid[type=tel]:not(.browser-default):focus, input.valid[type=number]:not(.browser-default), input.valid[type=number]:not(.browser-default):focus, input.valid[type=search]:not(.browser-default), input.valid[type=search]:not(.browser-default):focus, textarea.materialize-textarea.valid, textarea.materialize-textarea.valid:focus, .select-wrapper.valid>input.select-dropdown {
+  border-bottom: 1px solid var(--color-purple);
+  box-shadow: 0 1px 0 0 var(--color-purple);
+}
+
+input:not([type]):focus:not([readonly]), input[type=text]:not(.browser-default):focus:not([readonly]), input[type=password]:not(.browser-default):focus:not([readonly]), input[type=email]:not(.browser-default):focus:not([readonly]), input[type=url]:not(.browser-default):focus:not([readonly]), input[type=time]:not(.browser-default):focus:not([readonly]), input[type=date]:not(.browser-default):focus:not([readonly]), input[type=datetime]:not(.browser-default):focus:not([readonly]), input[type=datetime-local]:not(.browser-default):focus:not([readonly]), input[type=tel]:not(.browser-default):focus:not([readonly]), input[type=number]:not(.browser-default):focus:not([readonly]), input[type=search]:not(.browser-default):focus:not([readonly]), textarea.materialize-textarea:focus:not([readonly]) {
+  border-bottom: 1px solid var(--color-purple);
+  box-shadow: 0 1px 0 0 var(--color-purple);
+}
+
+.input-field .prefix.active {
+	color: var(--color-purple);
+}
+
+.btn {
+  background-color: var(--color-purple);
+}
+
+/* 
+input[type=number]:not(.browser-default):focus:not([readonly]) {
+  border-bottom: 1px solid var(--color-purple);
+  box-shadow: 0 1px 0 0 var(--color-purple);
+} */
+
+body {
+	font-family: "Open Sans", serif;
+	font-weight: 400;
+	font-size: 14px;
+	--color-purple: #9966CC;
+  --color-accent: #5e35b1;
+	--sidenav-bg-color: #f5f6f7;
+	--main-font-color: #3D4449;
+	--color-grey-light: #7f888f;
+}
+
+h1, h2, h3, h4, h5, p {
+	margin: 0;
+}
+
+[class*="__container"] {
+  padding-left: 24px;
+  padding-right: 75px;
+  margin: 0 auto;
+  max-width: 1760px;
+  overflow: hidden;
+}
+
+.wrapper {
+  min-height: 100vh;
+	display: flex;
+	flex-direction: row-reverse;
+}
+
+.sidebar {
+  width: 250px;
+}
+
+.dropdown-content {
+  border-radius: 5px;
+  background: rgba( 255, 255, 255);
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  backdrop-filter: blur( 20px );
+  -webkit-backdrop-filter: blur( 20px );
+  border-radius: 10px;
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+
+.sidenav li>a:hover {
+  border-radius: 5px;
+}
+
+nav .sidenav-trigger {
+  margin: 0 12px;
+}
+
+.main {
+  flex-grow: 1;
+  flex-shrink: 1;
+  width: 100%;
+  padding-top: 60px;
+}
+
+.custom__text {
+	color: var(--color-accent);
+  font-weight: 600;
+}
+
+.main__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: solid 4px var(--color-purple);
+  border-radius: 5px;
+}
+
+.main__title {
+	font-family: "Roboto Slab", serif;
+  font-size: 19px;
+  color: #7F888F;
+}
+
+.main__title-custom {
+  font-weight: 600;
+  color: #3d4448;
+}
+
+.social__media-icons {
+  display: flex;
+  gap: 15px;
+}
+
+.social__media-icons li>a {
+  color: var(--color-grey-light);
+}
+
+.title-header {
+	display: inline-block;
+  font-weight: 700;
+  font-family: "Roboto Slab", serif;
+  line-height: 1.5;
+  color: var(--main-font-color);
+  border-bottom: solid 3px var(--color-purple);
+  padding: 0 0 10px 0;
+  border-radius: 5px;
+}
+
+.quote__text {
+  font-size: 17px;
+  font-style: italic;
+  padding: 10px 0 10px 25px;
+  border-left: 2px solid var(--color-purple);
+  color: var(--color-grey-light);
+  border-radius: 5px;
+}
+
+.carousel {
+  cursor:grabbing;
+}
+
+.carousel .indicators {
+  bottom: -55px;
+}
+
+.carousel .indicators .indicator-item.active  {
+  background-color: var(--color-purple);
+  opacity: 1;
+}
+.carousel .indicators .indicator-item  {
+  background-color: var(--color-purple);
+  opacity: 0.5;
+}
+
+.carousel .carousel-item {
+  height: auto;
+}
+
+.carousel {
+  overflow: visible;
+}
+
+i.medium {
+  font-size: 3rem;
+}
+
+@media (max-width: 1420px) {
+  .main__title {
+    font-size: 15px;
+    margin: 0;
+  }
+	.main__container {
+    padding-right: 24px;
+  }
+  .quote__text {
+    font-size: 14px;
+  }
+}
+
+@media only screen and (max-width : 992px) {
+  .sidebar {
+    width: 0px;
+  }
+	main {
+    margin-left: 0;
+  }
+}
+
+
+@media only screen and (max-width : 420px) {
+  .carousel .carousel-item {
+    height: 335px;
+    width: 215px;
+  }
+  .quote__text {
+    font-size: 12px;
+  }
+}
