--- a/client/src/app/feedback-page/feedback-page.component.html
+++ b/client/src/app/feedback-page/feedback-page.component.html
@@ -24,7 +24,6 @@
         </ul>
       </div>
       <section class="feedback__section feedback">
-        <h2 class="feedback__title">Написать нам</h2>
         <form
           class="card"
           [formGroup]="form"
@@ -35,24 +34,24 @@
               <div class="input-field col s12">
                 <i class="small material-icons prefix">account_circle</i>
                 <input id="icon_prefix" type="text" formControlName="name" class="validate">
-                <label for="icon_prefix">Имя</label>
+                <label for="icon_prefix" class="card__input">Имя</label>
               </div>
               <div class="input-field col s12">
                 <i class="medium material-icons prefix">phone</i>
                 <input id="icon_telephone" type="number" formControlName="phone" class="validate">
-                <label for="icon_telephone">Телефон</label>
+                <label for="icon_telephone" class="card__input">Телефон</label>
               </div>
               <div class="input-field col s12">
                 <i class="material-icons prefix">textsms</i>
                 <textarea id="textarea1" formControlName="text" class="materialize-textarea"></textarea>
-                <label for="textarea1">Текст</label>
+                <label for="textarea1" class="card__input">Текст</label>
               </div>
             </div>
           </div>
           <div class="card-action">
             <button
               type="submit"
-              class="modal-action btn waves-effect"
+              class="modal-action btn waves-effect card__btn"
               [disabled]="form.invalid"
             >
               Отправить
