--- a/client/src/app/feedback-page/feedback-page.component.css
+++ b/client/src/app/feedback-page/feedback-page.component.css
@@ -2,8 +2,8 @@
 	border-radius: 10px
 }
 .feedback__section {
-	padding-top: 100px;
-	padding-bottom: 100px;
+	padding-top: 50px;
+	padding-bottom: 50px;
 }
 .feedback__title {
 	font-size: 30px;
@@ -15,6 +15,7 @@
 }
 
 .card-content {
+	padding: 5px;
 	font-size: 17px;
 	color: var(--color-grey-light)
 }
@@ -22,5 +23,12 @@
 @media (max-width: 1420px) {
   .feedback__title {
     font-size: 18px;
+  }
+}
+
+@media (max-width: 420px) {
+  .card__input,
+	.card__btn {
+    font-size: 12px;
   }
 }
